--- a/IucaWebApp/Web/appsettings.json
+++ b/IucaWebApp/Web/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection" : "Host=localhost;Port=5432;Database=WebApp;Username=postgres;Password=yh327z2n"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
